--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -12,7 +12,7 @@
 - name: Exhibition
   path: exhibition.html
 - name: Schedule & Location
-  path: sched_location.html
+  path: schedule-and-location.html
 - name: Contact
   path: contact.html
   section_id: contact
