--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -16,6 +16,6 @@
 - name: Schedule & Location
   path: schedule-and-location.html
   section_id: schedule
-- name: Contact
-  path: contact.html
-  section_id: contact
+# - name: Contact
+#   path: contact.html
+#   section_id: contact
