--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,10 @@ description: > # this means to ignore newlines until "baseurl:"
   Inter/sections is an annual week-long event organised by the students of the Media and Arts Technology Program at Queen Mary University of London. During this week we 
   discuss relevant themes to art and technology practice through events, workshops, conversations, and a Symposium day where we foster exchange between aritsts, industry, 
   academia and activists.
-baseurl: "" # the subpath of your site, e.g. /blog/
-# url: "http://yourdomain.com" # the base hostname & protocol for your site
+# ATTENTION! To develop locally, comment line 10, uncomment line 11. 
+# Before pushing to Github, uncomment line 10, comment line 11.
+baseurl: "https://disastrid.github.io/intersections_redux/" 
+# baseurl: ""
 twitter_username: intersections_io
 github_username:  jekyll
 
