--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,16 @@ description: > # this means to ignore newlines until "baseurl:"
   Inter/sections is an annual week-long event organised by the students of the Media and Arts Technology Program at Queen Mary University of London. During this week we 
   discuss relevant themes to art and technology practice through events, workshops, conversations, and a Symposium day where we foster exchange between aritsts, industry, 
   academia and activists.
-# ATTENTION! To develop locally, comment line 10, uncomment line 11. 
-# Before pushing to Github, uncomment line 10, comment line 11.
-url: "https://disastrid.github.io/intersections_redux/" 
-# url: "localhost:4000"
+# ATTENTION! To develop locally, comment live URLs (lines 12 & 13), uncomment local ones (lines 16 & 17). 
+# BEFORE PUSHING LIVE, comment local URLs and uncomment live URLs.
 
+# UNCOMMENT THESE BEFORE PUSHING TO LIVE REPO:
+url: "https://disastrid.github.io/intersections_redux/" 
 baseurl: "https://disastrid.github.io/intersections_redux/"
+
+# UNCOMMENT THESE TO DEVELOP LOCALLY:
+# url: "localhost:4000"
+# baseurl: ""
 
 twitter_username: intersections_io
 github_username:  jekyll
