Corrected all URLs for supporters

--- a/_data/supporters.yml
+++ b/_data/supporters.yml
@@ -1,10 +1,10 @@
 - image: images/supporters/mat_t.png
-  link: http://www.mat.qmul.ac.uk
+  link: http://www.mat.qmul.ac.uk/
 - image: images/supporters/qmul_t.png
-  link: http://qmul.ac.uk
+  link: http://qmul.ac.uk/
 - image: images/supporters/epsrc_t.png
-  link: http://epsrc.gov.uk
+  link: https://www.epsrc.ac.uk/
 - image: images/supporters/den_t.png
-  link: http://den.epsrc.org
+  link: https://digitaleconomynetwork.com/
 - image: images/supporters/ahrc_t.png
-  link: http://ahrc.co.uk
+  link: http://www.ahrc.ac.uk/
