--- a/_data/artists.yml
+++ b/_data/artists.yml
@@ -1,20 +1,10 @@
 - image: images/@stock/member-1.jpg
-  name: Julian Oliver
-  position: Artist and engineer
-  socials:
-    - link: http://twitter.com
-      icon: twitter
-    - link: http://facebook.com
-      icon: facebook
-  bio:
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetue.
-- image: images/@stock/member-1.jpg
   name: Will Hurt
   position: Artist
   socials:
-    - link: http://twitter.com
+    - link: http://willhurt.net
+      icon: link
+    - link: https://twitter.com/_willhurt
       icon: twitter
-    - link: http://facebook.com
-      icon: facebook
   bio:
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetue.
+    Will Hurt (b.1984) uses computers to produce work that draws on formal elements of architecture and the language of diagrams with the aim of engaging people with the built environment, often through play.
