Added speaker and artist pics

--- a/_data/artists.yml
+++ b/_data/artists.yml
@@ -1,4 +1,4 @@
-- image: images/@stock/member-1.jpg
+- image: images/people/will-hurt.jpg
   name: Will Hurt
   position: Computer artist
   socials:
