Added TCCE logo and put it in the carousel

--- a/_data/supporters.yml
+++ b/_data/supporters.yml
@@ -8,3 +8,5 @@
   link: https://digitaleconomynetwork.com/
 - image: images/supporters/ahrc_t.png
   link: http://www.ahrc.ac.uk/
+- image: images/supporters/tcce_t.png
+  link: http://www.theculturecapitalexchange.co.uk/
