Corrected time on exhibition

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -8,7 +8,7 @@
 - image: exhibition.jpg
   name: Inter/sections Art Exhibition
   date: Sunday September 3 - Friday September 8
-  time: All day
+  time: 10am - 6pm (later for special events)
   tags: ["art", "family"]
   desc:
     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetue.
