Corrected strapline for Will Hurt

--- a/_data/artists.yml
+++ b/_data/artists.yml
@@ -7,4 +7,4 @@
     - link: https://twitter.com/_willhurt
       icon: twitter
   bio:
-    Will Hurt (b.1984) uses computers to produce work that draws on formal elements of architecture and the language of diagrams with the aim of engaging people with the built environment, often through play.
+    Computer Artist questioning the relationship between art and curation through generated abstracted layouts of physical space.
