Added link to ethics panel eventbrite

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -53,6 +53,6 @@
   time: 5.30-6.30pm
   tags: ["ethics", "discussion"]
   button-url: "https://www.eventbrite.co.uk/e/intersections-work-ethics-in-the-age-of-automation-tickets-36745741502"
-  button-text: Reserve your free Symposium ticket   
+  button-text: Reserve your free place
   desc:
     Automation is seen as the most important development in labour since the Industrial Revolution with futurologists predicting seismic shifts in the jobs market, but where does this leave the technology sector? This panel discussion will look at the changing nature of the sector, different models of working, and how this impacts on the individual. (This panel is included with your Symposium ticket, or may be booked separately using the link below.)
