got rid of lorem ipsum on events page aughh

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -6,7 +6,7 @@
   button-url: "https://www.eventbrite.co.uk/e/intersections-family-cryptoparty-tickets-36745598073"
   button-text: Reserve your free place
   desc:
-    Inter/sections hosts a Family Cryptoparty to highlight issues of privacy and security that affect all of us in our connected society. It aims to empower people from all ages and walks of life with the knowledge of how to manage their personal privacy and use encryption in a way that is relevant and useful to them. Featuring a make-your-own cypher Spy Corner!
+    Inter/sections hosts a Family Cryptoparty to highlight issues of privacy and security that affect all of us in our connected society. It aims to empower people from all ages and walks of life with the knowledge of how to manage their personal privacy and use encryption in a way that is relevant and useful to them. Featuring a make-your-own-cipher Spy Corner!
 - image: exhibition.jpg
   name: Inter/sections Art Exhibition
   date: Sunday September 3 - Friday September 8
