Adjusted launch text as per VCP's request

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -29,7 +29,7 @@
   time: 6-8pm
   tags: ["art", "family"]
   desc:
-    Join the artists and organisers behind Inter/sections for refreshments to celebrate the launch of our exhibition of artwork on the theme of technology and ethics.
+    Join the artists and organisers behind Inter/sections for refreshments to celebrate the launch of our exhibition of artwork on the theme of technology and ethics. Please email <a href="mailto:info@intersections.io">info@intersections.io</a> to be placed on the guestlist.
 - image: symposium.jpg
   name: Inter/sections Symposium
   date: Friday September 8
