--- a/_data/artists.yml
+++ b/_data/artists.yml
@@ -25,6 +25,12 @@
     - link: http://annaridler.com/wikileaks-a-love-story
       icon: link
   bio: Anna is an artist and researcher whose practice usually involves working with existing collections of information or data to create new and unusual narratives.
+- image: images/people/lily-saporta-tagiuri.jpg
+  name: Lily Saporta-Tagiuri
+  socials:
+    - link: https://www.idcsm2017.com/lily-saporta-tagiuri
+      icon: link
+  bio: Lily is an industrial designer whose work lives at the junction of geo-politics and urban planning.
 - image: images/people/jelka-kretzschmar.jpg
   name: Jelka Kretzschmar
   socials:
