Add Anna's twitter handler

--- a/_data/artists.yml
+++ b/_data/artists.yml
@@ -24,6 +24,8 @@
   socials:
     - link: http://annaridler.com/wikileaks-a-love-story
       icon: link
+    - link: https://www.twitter.com/annaridler
+      icon: twitter
   bio: Anna is an artist and researcher whose practice usually involves working with existing collections of information or data to create new and unusual narratives.
 - image: images/people/lily-saporta-tagiuri.jpg
   name: Lily Saporta-Tagiuri
