Update artists' workshop title and details

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -15,14 +15,14 @@
   desc:
     All week long there is a curated exhibition featuring work by MAT students and invited artists, as well as a special commission of new work by computer artist Will Hurt.
 - image: willhurt.jpg
-  name: Hands-on workshop with Will hurt
+  name: "Artists' Workshop and Talks: Will Hurt, Yosuke Ushigome and Anna Ridler"
   date: Monday September 4
   time: 2-5pm
   tags: ["art", "discussion", "workshop"]
   button-url: "https://www.eventbrite.co.uk/e/intersections-artists-workshop-tickets-36745714421"
   button-text: Reserve your free place
   desc:
-    A hands-on workshop for artists interested in working with technology (Monday 4 September), led by commissioned artist Will Hurt.
+    "A hands-on workshop for artists interested in working with technology, led by commissioned artist Will Hurt. Yosuke Ushigome and Anna Ridler will both give artist talks on their respective pieces <em>Professional Sharing</em> and <em>Wikileaks: A Love Story.</em>"
 - image: launch.jpg
   name: Exhibition launch
   date: Monday September 4
