Added Soomi to artist workshop

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -22,7 +22,7 @@
   button-url: "https://www.eventbrite.co.uk/e/intersections-artists-workshop-tickets-36745714421"
   button-text: Reserve your free place
   desc:
-    "A hands-on workshop for artists interested in working with technology, led by commissioned artist Will Hurt. Yosuke Ushigome and Anna Ridler will both give artist talks on their respective pieces <em>Professional Sharing</em> and <em>Wikileaks: A Love Story.</em>"
+    A hands-on event for artists interested in working with technology, with workshops from artists Will Hurt, Tim Sargent and Soomi Park. Yosuke Ushigome and Anna Ridler will both give artist talks on their respective pieces <em>Professional Sharing</em> and <em>Wikileaks, A Love Story</em>.
 - image: launch.jpg
   name: Exhibition launch
   date: Monday September 4
